app/static/presentation/index.css
body
{
  /*background: url(../img/seal.jpg) no-repeat center center fixed;*/
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}


input {
	color: black;
}

select {
	color: black;
}

/* Text Input Css */
input[type=text] {
    border: 2px solid rgb(173, 204, 204);
    height: 27px;
    width: 100%;
    box-shadow: 0 0 27px rgb(204, 204, 204) inset;
    transition: 500ms all ease;
    padding: 3px 3px 3px 3px;
}

input[type=text]:hover,
input[type=text]:focus {
    transition: 500ms all ease;
    background-size: 25px 25px;
    background-position: 96% 62%;
}

/* Check box css */

input[type=checkbox].css-checkbox {
	display:none;
}

input[type=checkbox].css-checkbox + label.css-label {
	padding-left:32px;
	height:27px; 
	display:inline-block;
	line-height:27px;
	background-repeat:no-repeat;
	background-position: 0 0;
	font-size:27px;
	vertical-align:middle;
	cursor:pointer;
}

input[type=checkbox].css-checkbox:checked + label.css-label {
	background-position: 0 -27px;
}

label {
	margin-left: 10px;
	margin-right: 10px;
}

label.css-label {
	background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_ca708435d10299265ec33ed7d1ebd36c.png);
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.todolist-item-container {
	border: 1px dashed white;
	min-width: 500px;
	max-width: 960px;
	width: 80%;
	padding-left: 20px;
	padding-right: 20px;
}

.todolist-item-container.faded {
	opacity: 0.4;
}

.todolist-item-container:focus {
	outline: none;
  	border-left: 3px solid rgba(81, 203, 238, 1);
  	padding-left: 18px;
}

.inline {
	float: left;
	margin-top: 10px;
	margin-bottom: 10px;
	line-height: 27px;
	max-height: 27px;
	font-size: 20px;
}

.description {
	min-width: 300px;
	width: 50%;
	padding-left: 20px;
	padding-right: 20px;
	overflow: hidden;
	text-overflow: ellipsis;
}

.due_date {
	min-width: 150px;
	max-width: 20%;
	width: 20%;
	overflow: hidden;
	text-overflow: ellipsis;
}

.checkbox {
	min-width: 50px;
	width: 5%;
}

.delete_button {
	min-width: 28px;
	width: 5%;
	margin-left: 20px;
}

.clearfix:after {
	content: ".";
	display: none;
	height: 0;
	clear: both;
	visibility: hidden;
}

.clearfix {display: inline-block;}  /* for IE/Mac */

